--- a/src/App.css
+++ b/src/App.css
@@ -29,14 +29,38 @@ h1 {
     padding : 20px;
     margin : 15px 10px;
 }
+.inner-container-fieldset {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 50%;
+    border : 2px solid navy;
+    border-radius: 10px;
+    background-color: aliceblue;
+    padding : 20px;
+    margin : 15px 10px;
+    color : navy;
+    font-size: large;
+}
 
-.reset-button {
+.inner-container-fieldset label{
+    padding : 10px 10px;
+    font-family: Merryweather, Arial, serif;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 12px;
+}
+
+.reset-button,
+.send-button {
     font-size: large;
     color : navy;
     background-color: aliceblue;
     border: 2px solid navy;
     border-radius: 15px;
 }
+
 
 
 p {
